# learn-sql

./: .gitignore
backend/: conftest.py  manage.py  pyproject.toml
backend/app/: cli.py  database.py  main.py  settings.py
backend/app/auth/: api.py  auth_cli.py
backend/app/auth/fixtures/: users.yaml
backend/app/auth/migrations/: auth.py
backend/app/auth/services/: services.py  user_service.py
backend/app/auth/tests/: conftest.py  test_auth_api.py  test_user_service.py
backend/app/core/: crud.py
backend/app/fixtures/: users.yaml
backend/app/migrations/: __init__.py
backend/app/tests/: test_users.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: Layout.tsx  main.tsx  query-client.ts
frontend/src/components/: TablePagination.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/modules/users/: UserList.tsx
frontend/src/pages/roles/: RoleListPage.tsx
frontend/src/pages/users/: UserListPage.tsx
frontend/src/tables/: BooksTable.tsx  TagsTable.tsx
